--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vee-validate/zod": "^4.13.2",
     "axios": "^1.7.7",
+    "laravel-vue-pagination": "^4.1.3",
     "vee-validate": "^4.13.2",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5",
